--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 	
 <p>	
 	Before joining HKU, I was a postdoctoral research fellow in <a href="https://www.stanford.edu/">Stanford University</a>, working with Prof. <a href="https://med.stanford.edu/xinglab.html">Lei Xing</a>. 
-	I obtained my Ph.D. degree in the <a href="http://www.cse.cuhk.edu.hk/">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, supervised by <a href="http://www.cse.cuhk.edu.hk/~pheng" target="_blank">Prof. Pheng-Ann Heng</a> and <a href="http://www.cse.cuhk.edu.hk/~cwfu" target="_blank">Prof. Chi-Wing Fu</a> in July 2019. 
-	Previously, I received the B.Eng degree from <a href="http://www.cs.zju.edu.cn/">Department of Computer Science and Technology</a> in <a href="http://www.zju.edu.cn/">Zhejiang University</a> in 2015, under the supervision of <a href="http://www.cad.zju.edu.cn/home/dengcai/">Prof. Deng Cai</a>.
+	I obtained my Ph.D. degree in <a href="http://www.cse.cuhk.edu.hk/">CSE</a>, <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, supervised by <a href="http://www.cse.cuhk.edu.hk/~pheng" target="_blank">Prof. Pheng-Ann Heng</a> and <a href="http://www.cse.cuhk.edu.hk/~cwfu" target="_blank">Prof. Chi-Wing Fu</a> in July 2019. 
+	Before that, I received the B.Eng degree in <a href="http://www.cs.zju.edu.cn/">CS</a>, <a href="http://www.zju.edu.cn/">Zhejiang University</a> in 2015, under the supervision of <a href="http://www.cad.zju.edu.cn/home/dengcai/">Prof. Deng Cai</a>.
 </p>
 
 
@@ -142,7 +142,18 @@
 	</li>
 </ul>
 
-
+<h2>Students</h2>
+<li>	
+	<b>Previous Mentorship:</b>
+	<br>
+	<!-- <a href="https://people.ucsc.edu/~jwang470/about/">Jialu Wang</a>, UCSC PhD student (co-advising with <a href="http://www.yliuu.com">Yang Liu</a>)<br>-->
+	<a href="">Kang Li</a> (Ph.D. at CUHK)<br>
+	<a href="https://emmaw8.github.io/">Shujun Wang</a> (Ph.D. at CUHK)<br>
+	<a href="http://web.stanford.edu/~liyues/">Liyue Shen</a> (Ph.D. at Stanford)<br>
+	<a href="https://nini-lxz.github.io/">Xianzhi Li</a> (Ph.D. at CUHK) (now, Postdoc at CUHK))<br>	
+</li>
+	
+	
 <h2>Selected Publications [<a href="https://scholar.google.com/citations?hl=en&user=llXf3wUAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a>]</h2>
 	<ul>
 		* indicates equal contribution; <sup>†</sup> indicates corresponding authorship.
