--- a/index.html
+++ b/index.html
@@ -497,10 +497,10 @@
 	<b>Previous Mentorship:</b>
 	<br>
 	<!-- <a href="https://people.ucsc.edu/~jwang470/about/">Jialu Wang</a>, UCSC PhD student (co-advising with <a href="http://www.yliuu.com">Yang Liu</a>)<br>-->
-	<a href="">Kang Li</a> (Ph.D. at CUHK)<br>
-	<a href="https://emmaw8.github.io/">Shujun Wang</a> (Ph.D. at CUHK)<br>
-	<a href="http://web.stanford.edu/~liyues/">Liyue Shen</a> (Ph.D. at Stanford)<br>
-	<a href="https://nini-lxz.github.io/">Xianzhi Li</a> (Ph.D. at CUHK) (now, Postdoc at CUHK))<br>	
+	Kang Li (Ph.D. at CUHK)<br>
+	<a href="https://emmaw8.github.io/" target="_blank">Shujun Wang</a> (Ph.D. at CUHK)<br>
+	<a href="http://web.stanford.edu/~liyues/" target="_blank">Liyue Shen</a> (Ph.D. at Stanford)<br>
+	<a href="https://nini-lxz.github.io/" target="_blank">Xianzhi Li</a> (Ph.D. at CUHK) (now, Postdoc at CUHK))<br>	
 </li>
 
 <h2>Honors &amp; Awards</h2>
