--- a/index.html
+++ b/index.html
@@ -496,6 +496,19 @@
 <li>	
 	<b>Previous Mentorship:</b>
 	<br>
+	<table style="border-spacing:2px">
+	<tbody>
+	
+	<tr><td> Kang Li (Ph.D. at CUHK) </td></tr>
+	<tr><td> <a href="https://emmaw8.github.io/" target="_blank">Shujun Wang</a> (Ph.D. at CUHK)</td></tr>
+	<tr><td> <a href="http://web.stanford.edu/~liyues/" target="_blank">Liyue Shen</a> (Ph.D. at Stanford)</td></tr>
+	<tr><td> <a href="https://nini-lxz.github.io/" target="_blank">Xianzhi Li</a> (Ph.D. at CUHK) (now, Postdoc at CUHK))</td></tr>
+	
+	</tbody>
+	</table>
+</li>
+
+<li>
 	<!-- <a href="https://people.ucsc.edu/~jwang470/about/">Jialu Wang</a>, UCSC PhD student (co-advising with <a href="http://www.yliuu.com">Yang Liu</a>)<br>-->
 	Kang Li (Ph.D. at CUHK)<br>
 	<a href="https://emmaw8.github.io/" target="_blank">Shujun Wang</a> (Ph.D. at CUHK)<br>
