--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
 	<tr><td> Kang Li (Ph.D. at CUHK) </td></tr>
 	<tr><td> <a href="https://emmaw8.github.io/" target="_blank">Shujun Wang</a> (Ph.D. at CUHK)</td></tr>
 	<tr><td> <a href="http://web.stanford.edu/~liyues/" target="_blank">Liyue Shen</a> (Ph.D. at Stanford)</td></tr>
-	<tr><td> <a href="https://nini-lxz.github.io/" target="_blank">Xianzhi Li</a> (Ph.D. at CUHK) (now, Postdoc at CUHK))</td></tr>
+	<tr><td> <a href="https://nini-lxz.github.io/" target="_blank">Xianzhi Li</a> (Ph.D. at CUHK) (now, Postdoc at CUHK)</td></tr>
 	
 	</tbody>
 	</table>
