--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
 				</p>
 				<p> <a href="https://scholar.google.com/citations?hl=en&user=llXf3wUAAAAJ&view_op=list_works&sortby=pubdate"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://github.com/yulequan"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a>
+					<a href="https://orcid.org/0000-0002-9315-6527"><img src="./pic/orcid.jpeg" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://www.researchgate.net/profile/Lequan_Yu"><img src="./pic/rg.png" height="30px" style="margin-bottom:-3px"></a>
+					<a href="https://twitter.com/ylqzd2011"><img src="./pic/twitter.png" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://www.linkedin.com/in/lequan-yu-124811a2"><img src="./pic/LinkedIn_s.png" height="30px" style="margin-bottom:-3px"></a>
-					<a href="https://zh-cn.facebook.com/people/Lequan-Yu/100003696557697"><img src="./pic/Facebook_s.png" height="30px" style="margin-bottom:-3px"></a>
 				</p>
 			</td>
 			<td>
