--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
-		[02/2021] One paper about CT reconstruction was accepted by Medical Physics.
+		[04/2021] Two papers were accepted by Medical Physics.
 	</li>
 	<li>
 		[11/2020] One paper about annotation-efficient cardiac segmentation was accepted by TMI.
@@ -150,6 +150,11 @@
 	</ul>
 	<p><font face="Arial" size="4"><b>2021</b></font></p>
 	<ul>
+	<li>
+		<a href="" target="_blank">MR to ultrasound image registration with segmentation-based learning for HDR prostate brachytherapy</a><br>
+		Yizheng Chen, Lei Xing, <b>Lequan Yu</b>, Wu Liu, Benjamin P Fahimian, Thomas Niedermayr, Hilary Bagshaw, Mark K Buyyounouski, Bin Han<br>
+		<em>Medical Physics</em>, 2021.</br>
+	</li>
 	<li>
 		<a href="" target="_blank">Modularized Data-Driven Reconstruction Framework for Non-ideal Focal Spot Effect Elimination in Computed Tomography</a><br>
 		Zhicheng Zhang, <b>Lequan Yu</b>, Wei Zhao, Lei Xing. <br>
