--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[04/2021] One papers about self-supervised learning waw accepted by TMI.
+	</li>
+	<li>
 		[04/2021] Two papers were accepted by Medical Physics.
 	</li>
 	<li>
@@ -132,6 +135,11 @@
 		Advisor: <a href="https://med.stanford.edu/xinglab.html">Prof. Lei Xing</a><br>
 	</li>
 	<li>
+		<div style="float:left; text-align:left">Stanford University, Palo Alto, California, USA</div> <div style="float:right; text-align:right">Nov. 2019 – Mar. 2021</div><br>
+		Postdoctoral Research Fellow<br>
+		Advisor: <a href="https://med.stanford.edu/xinglab.html">Prof. Lei Xing</a><br>
+	</li>
+	<li>
 		<div style="float:left; text-align:left">NVIDIA, deep learning for medical imaging research group, Bethesda, Maryland, USA</div> <div style="float:right; text-align:right">Jul. 2018 – Oct. 2018</div><br>
 		Applied Research Intern<br>
 		Topic: Few-shot medical image segmentation<br>
@@ -151,12 +159,17 @@
 	<p><font face="Arial" size="4"><b>2021</b></font></p>
 	<ul>
 	<li>
+		<a href="" target="_blank">Rotation-oriented Collaborative Self-supervised Learning for Retinal Disease Diagnosis</a><br>
+		Xiaomeng Li, Xiaowei Hu, Xiaojuan Qi, <b>Lequan Yu</b>, Wei Zhao, Pheng-Ann Heng, Lei Xing<br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2021.</br>
+	</li>
+	<li>
 		<a href="" target="_blank">MR to ultrasound image registration with segmentation-based learning for HDR prostate brachytherapy</a><br>
 		Yizheng Chen, Lei Xing, <b>Lequan Yu</b>, Wu Liu, Benjamin P Fahimian, Thomas Niedermayr, Hilary Bagshaw, Mark K Buyyounouski, Bin Han<br>
 		<em>Medical Physics</em>, 2021.</br>
 	</li>
 	<li>
-		<a href="" target="_blank">Modularized Data-Driven Reconstruction Framework for Non-ideal Focal Spot Effect Elimination in Computed Tomography</a><br>
+		<a href="https://aapm.onlinelibrary.wiley.com/doi/10.1002/mp.14785" target="_blank">Modularized Data-Driven Reconstruction Framework for Non-ideal Focal Spot Effect Elimination in Computed Tomography</a><br>
 		Zhicheng Zhang, <b>Lequan Yu</b>, Wei Zhao, Lei Xing. <br>
 		<em>Medical Physics</em>, 2021.</br>
 	</li>
