--- a/index.html
+++ b/index.html
@@ -135,11 +135,6 @@
 		Advisor: <a href="https://med.stanford.edu/xinglab.html">Prof. Lei Xing</a><br>
 	</li>
 	<li>
-		<div style="float:left; text-align:left">Stanford University, Palo Alto, California, USA</div> <div style="float:right; text-align:right">Nov. 2019 – Mar. 2021</div><br>
-		Postdoctoral Research Fellow<br>
-		Advisor: <a href="https://med.stanford.edu/xinglab.html">Prof. Lei Xing</a><br>
-	</li>
-	<li>
 		<div style="float:left; text-align:left">NVIDIA, deep learning for medical imaging research group, Bethesda, Maryland, USA</div> <div style="float:right; text-align:right">Jul. 2018 – Oct. 2018</div><br>
 		Applied Research Intern<br>
 		Topic: Few-shot medical image segmentation<br>
@@ -160,12 +155,12 @@
 	<ul>
 	<li>
 		<a href="" target="_blank">Rotation-oriented Collaborative Self-supervised Learning for Retinal Disease Diagnosis</a><br>
-		Xiaomeng Li, Xiaowei Hu, Xiaojuan Qi, <b>Lequan Yu</b>, Wei Zhao, Pheng-Ann Heng, Lei Xing<br>
+		Xiaomeng Li, Xiaowei Hu, Xiaojuan Qi, <b>Lequan Yu</b>, Wei Zhao, Pheng-Ann Heng, Lei Xing.<br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2021.</br>
 	</li>
 	<li>
 		<a href="" target="_blank">MR to ultrasound image registration with segmentation-based learning for HDR prostate brachytherapy</a><br>
-		Yizheng Chen, Lei Xing, <b>Lequan Yu</b>, Wu Liu, Benjamin P Fahimian, Thomas Niedermayr, Hilary Bagshaw, Mark K Buyyounouski, Bin Han<br>
+		Yizheng Chen, Lei Xing, <b>Lequan Yu</b>, Wu Liu, Benjamin P Fahimian, Thomas Niedermayr, Hilary Bagshaw, Mark K Buyyounouski, Bin Han.<br>
 		<em>Medical Physics</em>, 2021.</br>
 	</li>
 	<li>
