--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <h2>Biography</h2>
 <p>
 	I am currently an assistant professor at The University of Hong Kong. My research lies at the intersection of artificial intelligence and medical image analysis. 
-	I am dedicated to designing data-efficient learning methods for biomedical image analysis and reconstruction. I also have expertise in deep learning for 3D vision. 
+	I am dedicated to designing advanced machine learning methods for biomedical image analysis and reconstruction. I also have expertise in deep learning for 3D vision. 
 	<!--Recently, I am working on new learning algorithms while minimizing human supervision (self-supervised, semi-supervised and multi-modality learning) and medical image reconstruction.-->
 </p>
 	
@@ -90,7 +90,7 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
-		[04/2021] One papers about self-supervised learning waw accepted by TMI.
+		[04/2021] One papers about self-supervised learning was accepted by TMI.
 	</li>
 	<li>
 		[04/2021] Two papers were accepted by Medical Physics.
@@ -341,18 +341,6 @@
 		</p>
 	</li>
 	-->
-	
-	<li>
-		<a href="https://arxiv.org/abs/1807.06010" target="_blank">EC-Net: an Edge-aware Point set Consolidation Network</a><br>
-		<b>Lequan Yu</b>, Xianzhi Li, Chi-Wing Fu, Daniel Cohen-Or, Pheng-Ann Heng.<br>
-		<em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.</br>
-		<p style="margin-top:3px">
-			[<a href="ec-net/index.html" target="_blank">project</a>]
-			[<a href="https://github.com/yulequan/EC-Net" target="_blank">code</a>]
-			[<a href="./files/ECCV18_EC-Net_supp.pdf" target="_blank">supp</a>]
-		</p>
-	</li>
-	
 	<li>
 		<a href="https://arxiv.org/abs/1801.06761" target="_blank">PU-Net: Point Cloud Upsampling Network</a><br>
 		<b>Lequan Yu</b>, Xianzhi Li, Chi-Wing Fu, Daniel Cohen-Or, Pheng-Ann Heng.<br>
@@ -364,6 +352,18 @@
 			[<a href="./files/cvpr18_posterv2.pdf" target="_blank">poster</a>]
 		</p>
 	</li>
+	
+	<li>
+		<a href="https://arxiv.org/abs/1807.06010" target="_blank">EC-Net: an Edge-aware Point set Consolidation Network</a><br>
+		<b>Lequan Yu</b>, Xianzhi Li, Chi-Wing Fu, Daniel Cohen-Or, Pheng-Ann Heng.<br>
+		<em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.</br>
+		<p style="margin-top:3px">
+			[<a href="ec-net/index.html" target="_blank">project</a>]
+			[<a href="https://github.com/yulequan/EC-Net" target="_blank">code</a>]
+			[<a href="./files/ECCV18_EC-Net_supp.pdf" target="_blank">supp</a>]
+		</p>
+	</li>
+
 
 	<li>
 		<a href="https://ieeexplore.ieee.org/document/8418398/" target="_blank">Towards Automated Semantic Segmentation in Prenatal Volumetric Ultrasound</a><br>
@@ -384,22 +384,22 @@
 <p><font face="Arial" size="4"><b>Before 2018</b></font></p> 
 <ul>
 	<li>
-		<a href="https://arxiv.org/abs/1708.00573" target="_blank">Automatic 3D Cardiovascular MR Segmentation with Densely-Connected Volumetric ConvNets</a><br>
-		<b>Lequan Yu</b>, Jie-Zhi Cheng, Qi Dou, Xin Yang, Hao Chen, Jing Qin, Pheng-Ann Heng.<br>
-		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2017.</br>
-		<p style="margin-top:3px">
-			[<a href="DenseVoxNet/index.html" target="_blank">project</a>]
-			[<a href="https://github.com/yulequan/HeartSeg" target="_blank">code</a>]
-		</p>
-	</li>
-
-	<li>
 		<a href="https://aaai.org/ocs/index.php/AAAI/AAAI17/paper/view/14719" target="_blank">Volumetric ConvNets with Mixed Residual Connections for Automated Prostate Segmentation from 3D MR Images</a><br>
 		<b>Lequan Yu</b>, Xin Yang, Hao Chen, Jing Qin, Pheng-Ann Heng.<br>
 		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2017. <b>[Oral Presentation]</b></br>
 		<font color="red">Ranked 1st on Prostate MR Image Segmentation (PROMISE12) leaderboard, until Jan. 2018.</font></br>
 		<p style="margin-top:3px">
 			[<a href="https://promise12.grand-challenge.org/" target="_blank">challenge website</a>]
+		</p>
+	</li>
+
+	<li>
+		<a href="https://arxiv.org/abs/1708.00573" target="_blank">Automatic 3D Cardiovascular MR Segmentation with Densely-Connected Volumetric ConvNets</a><br>
+		<b>Lequan Yu</b>, Jie-Zhi Cheng, Qi Dou, Xin Yang, Hao Chen, Jing Qin, Pheng-Ann Heng.<br>
+		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2017.</br>
+		<p style="margin-top:3px">
+			[<a href="DenseVoxNet/index.html" target="_blank">project</a>]
+			[<a href="https://github.com/yulequan/HeartSeg" target="_blank">code</a>]
 		</p>
 	</li>
 
