--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
 <p style="color:red;">
-	I am looking for self-motivated PhD students, postdocs, research assistants, and (remote) summer interns, who are interested in artificial intelligence for healthcare. 
+	I am looking for self-motivated PhD students, postdocs, research assistants, and interns, who are interested in artificial intelligence for healthcare. 
 	Welcome to drop me an email with your CV and transcripts. Remote collaboration is also welcome!
 </p>
 	
@@ -154,12 +154,12 @@
 	<p><font face="Arial" size="4"><b>2021</b></font></p>
 	<ul>
 	<li>
-		<a href="" target="_blank">Rotation-oriented Collaborative Self-supervised Learning for Retinal Disease Diagnosis</a><br>
+		<a href="https://ieeexplore.ieee.org/document/9411868" target="_blank">Rotation-oriented Collaborative Self-supervised Learning for Retinal Disease Diagnosis</a><br>
 		Xiaomeng Li, Xiaowei Hu, Xiaojuan Qi, <b>Lequan Yu</b>, Wei Zhao, Pheng-Ann Heng, Lei Xing.<br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2021.</br>
 	</li>
 	<li>
-		<a href="" target="_blank">MR to ultrasound image registration with segmentation-based learning for HDR prostate brachytherapy</a><br>
+		<a href="https://aapm.onlinelibrary.wiley.com/doi/10.1002/mp.14901" target="_blank">MR to ultrasound image registration with segmentation-based learning for HDR prostate brachytherapy</a><br>
 		Yizheng Chen, Lei Xing, <b>Lequan Yu</b>, Wu Liu, Benjamin P Fahimian, Thomas Niedermayr, Hilary Bagshaw, Mark K Buyyounouski, Bin Han.<br>
 		<em>Medical Physics</em>, 2021.</br>
 	</li>
