--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 <link rel="shortcut icon" href="myIcon.ico">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-<meta name="keywords" content="Lequan Yu, Yu Lequan, Lequan, The University of Hong Kong, HKU, Stanford University, Stanford, CUHK, The Chinese University of Hong Kong, ZJU, Zhejiang University"> 
-<meta name="description" content="Lequan Yu homepage">
-<meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
+<meta name="keywords" content="Lequan Yu, Yu Lequan, Lequan, HKU, University of Hong Kong, Stanford, CUHK, The Chinese University of Hong Kong, ZJU, Zhejiang University, Computer, Vision, Machine, Learning, Medical Image, Healthcare"> 
+<meta name="description" content="Lequan Yu is an Assistant Professor at HKU.">
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
 <title>Lequan Yu Homepage</title>
@@ -63,8 +62,8 @@
 
 <h2>Biography</h2>
 <p>
-	I am currently an assistant professor at The University of Hong Kong. My research lies at the intersection of artificial intelligence and medical image analysis. 
-	I am dedicated to designing advanced machine learning methods for biomedical image analysis and reconstruction. I also have expertise in deep learning for 3D vision. 
+	I am currently an assistant professor at The University of Hong Kong. My research lies at the intersection of artificial intelligence and healthcare. 
+	I am dedicated to designing advanced machine learning algorithms for biomedical data analysis, with a primary focus on medical images. I also have expertise in deep learning for 3D vision. 
 	<!--Recently, I am working on new learning algorithms while minimizing human supervision (self-supervised, semi-supervised and multi-modality learning) and medical image reconstruction.-->
 </p>
 	
@@ -76,7 +75,7 @@
 
 
 <p style="color:red;">
-	I am looking for self-motivated PhD students, postdocs, research assistants, and interns, who are interested in artificial intelligence for healthcare. 
+	I am looking for self-motivated Postdoc/PhD/RA/Interns, who are interested in artificial intelligence for healthcare. 
 	Welcome to drop me an email with your CV and transcripts. Remote collaboration is also welcome!
 </p>
 	
