--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 	
 <p>	
 	Before joining HKU, I was a postdoctoral research fellow in <a href="https://www.stanford.edu/">Stanford University</a>, working with Prof. <a href="https://med.stanford.edu/xinglab.html">Lei Xing</a>. 
-	I obtained my Ph.D. degree in <a href="http://www.cse.cuhk.edu.hk/">CSE</a>, <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, supervised by <a href="http://www.cse.cuhk.edu.hk/~pheng" target="_blank">Prof. Pheng-Ann Heng</a> and <a href="http://www.cse.cuhk.edu.hk/~cwfu" target="_blank">Prof. Chi-Wing Fu</a> in July 2019. 
-	Before that, I received the B.Eng degree in <a href="http://www.cs.zju.edu.cn/">CS</a>, <a href="http://www.zju.edu.cn/">Zhejiang University</a> in 2015, under the supervision of <a href="http://www.cad.zju.edu.cn/home/dengcai/">Prof. Deng Cai</a>.
+	I obtained my Ph.D. degree in <a href="http://www.cse.cuhk.edu.hk/">CSE</a>, <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a> in July 2019 
+	and the B.Eng degree in <a href="http://www.cs.zju.edu.cn/">CS</a>, <a href="http://www.zju.edu.cn/">Zhejiang University</a> in 2015.
 </p>
 
 
