--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
-		[04/2021] One papers about self-supervised learning was accepted by TMI.
+		[05/2021] One paper about multi-output consistency was accepeted by TMI.
+	<li>
+		[04/2021] One paper about self-supervised learning was accepted by TMI.
 	</li>
 	<li>
 		[04/2021] Two papers were accepted by Medical Physics.
@@ -115,13 +117,6 @@
 	<li>
 		[05/2020] Two papers about semi-supervised learning for medical image analysis were accepted by TMI and TNNLS.
 	</li> 
-	<li>
-		[04/2020] One paper about unsupervised point cloud analysis was accepted by ACM TOG.
-	</li>  
-	
-	<li>
-		[02/2020] One paper about multi-site learning was accepted by TMI.
-	</li>  
 						
 </ul>
 </div>
@@ -152,6 +147,11 @@
 	</ul>
 	<p><font face="Arial" size="4"><b>2021</b></font></p>
 	<ul>
+	<li>
+		<a href="" target="_blank">Deep Neural Network with Consistency Regularization of Multi-Output Channels for Improved Tumor Detection and Delineation</a><br>
+		Hyunseok Seo, <b>Lequan Yu</b>, Hongyi Ren, Xiaomeng Li, Liyue Shen, Lei Xing.<br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2021.</br>
+	</li>
 	<li>
 		<a href="https://ieeexplore.ieee.org/document/9411868" target="_blank">Rotation-oriented Collaborative Self-supervised Learning for Retinal Disease Diagnosis</a><br>
 		Xiaomeng Li, Xiaowei Hu, Xiaojuan Qi, <b>Lequan Yu</b>, Wei Zhao, Pheng-Ann Heng, Lei Xing.<br>
