--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
 <p>
 	I am currently an assistant professor at The University of Hong Kong. My research lies at the intersection of artificial intelligence and healthcare. 
 	I am dedicated to designing machine learning and deep learning algorithms for biomedical data analysis, with a primary focus on medical images. 
-	Specifically, we focus on: 1) developing multi-modal learning algorithms to intergrate different biomedical data; 
-	2) building real-world learning systems to learn fair, reliable, efficient, and generalizable representations;
+	Specifically, we focus on: 
+	1) developing multi-modal learning algorithms to intergrate different biomedical data; 
+	2) building real-world learning systems to learn reliable, generalizable, and fair representations from imperfect data;
 	and 3) developing causality-based learning algorithms to improve its interpretability for healthcare problems.
 	<!--Recently, I am working on new learning algorithms while minimizing human supervision (self-supervised, semi-supervised and multi-modality learning) and medical image reconstruction.-->
 </p>
