--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
-		[05/2021] One paper about multi-output consistency was accepeted by TMI.
+		[05/2021] One paper about multi-output consistency regularization was accepeted by TMI.
 	<li>
 		[04/2021] One paper about self-supervised learning was accepted by TMI.
 	</li>
@@ -152,7 +152,7 @@
 	<p><font face="Arial" size="4"><b>2021</b></font></p>
 	<ul>
 	<li>
-		<a href="" target="_blank">Deep Neural Network with Consistency Regularization of Multi-Output Channels for Improved Tumor Detection and Delineation</a><br>
+		<a href="https://ieeexplore.ieee.org/document/9443209" target="_blank">Deep Neural Network with Consistency Regularization of Multi-Output Channels for Improved Tumor Detection and Delineation</a><br>
 		Hyunseok Seo, <b>Lequan Yu</b>, Hongyi Ren, Xiaomeng Li, Liyue Shen, Lei Xing.<br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2021.</br>
 	</li>
