--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					Email: lqyu [at] hku [dot] hk
 			
 				</p>
-				<p> <a href="https://scholar.google.com/citations?hl=en&user=llXf3wUAAAAJ&view_op=list_works&sortby=pubdate"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
+				<p> <a href="https://scholar.google.com/citations?user=llXf3wUAAAAJ&hl=en"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://github.com/yulequan"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://orcid.org/0000-0002-9315-6527"><img src="./pic/orcid.jpeg" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://www.researchgate.net/profile/Lequan_Yu"><img src="./pic/rg.png" height="30px" style="margin-bottom:-3px"></a>
@@ -145,7 +145,7 @@
 </ul>
 
 	
-<h2>Selected Publications [<a href="https://scholar.google.com/citations?hl=en&user=llXf3wUAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a>]</h2>
+<h2>Selected Publications [<a href="https://scholar.google.com/citations?user=llXf3wUAAAAJ&hl=en">Google Scholar</a>]</h2>
 	<ul>
 		* indicates equal contribution; <sup>†</sup> indicates corresponding authorship.
 	</ul>
