--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
 
 <h2>Biography</h2>
 <p>
-	I am currently an assistant professor at The University of Hong Kong. My research lies at the intersection of artificial intelligence and healthcare. 
-	I am dedicated to designing machine learning and deep learning algorithms for biomedical data analysis, with a primary focus on medical images. 
+	I am currently an assistant professor at The University of Hong Kong. My research lies at the intersection of artificial intelligence and medical image analysis. 
+	I am dedicated to designing machine learning algorithms for biomedical data analysis, with a primary focus on medical images. 
 	Specifically, we focus on: 
 	1) developing multi-modal learning algorithms to intergrate different biomedical data; 
-	2) building real-world learning systems to learn reliable, generalizable, and fair representations from imperfect data;
+	2) building real-world learning systems to learn reliable, generalizable, and fair representations from imperfect medical data;
 	and 3) developing causality-based learning algorithms to improve its interpretability for healthcare problems.
 	<!--Recently, I am working on new learning algorithms while minimizing human supervision (self-supervised, semi-supervised and multi-modality learning) and medical image reconstruction.-->
 </p>
 	
 <p>	
-	Before joining HKU, I was a postdoctoral research fellow in <a href="https://www.stanford.edu/">Stanford University</a>, working with Prof. <a href="https://med.stanford.edu/xinglab.html">Lei Xing</a>. 
+	Before joining HKU, I was a postdoctoral research fellow at <a href="https://www.stanford.edu/">Stanford University</a>, working with Prof. <a href="https://med.stanford.edu/xinglab.html">Lei Xing</a>. 
 	I obtained my Ph.D. degree in <a href="http://www.cse.cuhk.edu.hk/">CSE</a>, <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a> in July 2019 
 	and the B.Eng degree in <a href="http://www.cs.zju.edu.cn/">CS</a>, <a href="http://www.zju.edu.cn/">Zhejiang University</a> in 2015.
 </p>
