--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[06/2021] Two papers were accepted by MICCAI 2021.
+	<li>
+	<li>
 		[05/2021] One paper about multi-output consistency regularization was accepeted by TMI.
 	<li>
 		[04/2021] One paper about self-supervised learning was accepted by TMI.
@@ -151,6 +154,16 @@
 	</ul>
 	<p><font face="Arial" size="4"><b>2021</b></font></p>
 	<ul>
+	<li>
+		<a href="https://arxiv.org/abs/2103.00634" target="_blank">TransCT: Dual-path Transformer for Low Dose Computed Tomography</a><br>
+		Zhicheng Zhang, <b>Lequan Yu</b>, Xiaokun Liang, Wei Zhao, Lei Xing.<br>
+		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2021.</br>
+	</li>
+	<li>
+		<a href="" target="_blank">Selective Learning from External Data for CT Image Segmentation</a><br>
+		Youyi Song, <b>Lequan Yu</b>, Baiying Lei, Kup-Sze Choi, Jing Qin.<br>
+		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2021.</br>
+	</li>
 	<li>
 		<a href="https://ieeexplore.ieee.org/document/9443209" target="_blank">Deep Neural Network with Consistency Regularization of Multi-Output Channels for Improved Tumor Detection and Delineation</a><br>
 		Hyunseok Seo, <b>Lequan Yu</b>, Hongyi Ren, Xiaomeng Li, Liyue Shen, Lei Xing.<br>
