--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
 </script>
 </head>
 <body>
+
+<nav class="navbar navbar-dark navbar-expand-lg fixed-top">
+    <div id="layout-menu">
+        <a href="#">Home</a>
+        <a href="#experience">Experience</a>
+        <a href="#publications">Publications</a>
+        <a href="#students">Students</a>
+        <a href="#service">Service</a>
+        <a href="#teaching">Teaching</a>
+        <a href="">CV</a>
+    </div>
+</nav>
+
 <div id="layout-content" style="margin-top:25px">
  <a href="https://github.com/yulequan" class="github-corner"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#FD6C6C; color:#fff; position: absolute; top: 0; border: 0; right: 0;"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
 
@@ -87,8 +100,8 @@
 	If you are an HKU student interested in doing research with me, please send me an email.
 </p>
 	
-<h2>News</h2>
 
+<h2>News</h2>
 
 <div style="height: 240px; overflow: auto;">
 <ul>
@@ -128,7 +141,8 @@
 						
 </ul>
 </div>
-
+<br>
+<div id="experience">
 <h2>Experience</h2>
 <ul>
 	<li>
@@ -147,8 +161,10 @@
 		Topic: Body landmark detection via deep reinforcement learning<br>
 	</li>
 </ul>
+<br>
+</div>
 
-	
+<div id="publications">
 <h2>Selected Publications [<a href="https://scholar.google.com/citations?user=llXf3wUAAAAJ&hl=en">Google Scholar</a>]</h2>
 	<ul>
 		* indicates equal contribution; <sup>†</sup> indicates corresponding authorship.
@@ -519,10 +535,12 @@
 		<em>IEEE International Symposium on Biomedical Imaging</em> (<i><b>ISBI</b></i>), 2015.</br>
 		
 	</li>
-	-->
-	
+	-->	
 </ul>
+<br>
+</div>
 
+<div id="students">
 <h2>Students</h2>
 	<b>Current Mentorship:</b>
 	<br>	
@@ -533,7 +551,7 @@
 	
 	</tbody>
 	</table>
-
+	<br>
 	<b>Previous Mentorship:</b>
 	<br>
 	<table style="border-spacing:2px">
@@ -543,12 +561,13 @@
 	<tr><td> <a href="https://emmaw8.github.io/" target="_blank">Shujun Wang</a> (Ph.D. at CUHK) (incoming Postdoc at Stanford)</td></tr>
 	<tr><td> <a href="http://web.stanford.edu/~liyues/" target="_blank">Liyue Shen</a> (Ph.D. at Stanford)</td></tr>
 	<tr><td> <a href="https://nini-lxz.github.io/" target="_blank">Xianzhi Li</a> (Ph.D. at CUHK) (now, Postdoc at CUHK)</td></tr>
-	
 	</tbody>
 	</table>
 <!-- <a href="https://people.ucsc.edu/~jwang470/about/">Jialu Wang</a>, UCSC PhD student (co-advising with <a href="http://www.yliuu.com">Yang Liu</a>)<br>-->
+<br>
+</div>
 	
-
+<div id="awards">
 <h2>Honors &amp; Awards</h2>
 <table style="border-spacing:2px">
 	
@@ -570,7 +589,10 @@
 		<tr><td> Outstanding Graduates of Zhejiang University, 2015</td></tr>
 	</tbody>
 </table>
+<br>
+</div>
 
+<div id="service">
 <h2>Professional Activities</h2>
 <li>	
 	<b>Conference Reviews:</b>
@@ -613,8 +635,10 @@
 	Computer Methods and Programs in Biomedicine (CMPB)<br>
 	<p style="margin-top:3px"></p>		
 </li>
+<br>
+</div>
 
-
+<div id="teaching">
 <h2>Teaching</h2>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
@@ -638,6 +662,7 @@
 		</tr>
 	</tbody>
 </table>
+</div>
 
 <!--
 <h2>Experience</h2>
