--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
 	<br>	
 	<table style="border-spacing:2px">
 	<tbody>
-	<tr><td> <a href="https://www.linkedin.com/in/lingting-zhu-0930861b6/?originalSubdomain=cn" target="_blank">Lingting Zhu</a> (incoming Ph.D.)</td></tr>
+	<tr><td> <a href="https://www.linkedin.com/in/lingting-zhu-0930861b6/?originalSubdomain=cn" target="_blank">Lingting Zhu</a> (incoming Ph.D.) (HKU-PS)</td></tr>
 	<tr><td> <a href="https://fuying-wang.github.io/" target="_blank">Fuying Wang</a> (incoming Ph.D.)</td></tr>
 	
 	</tbody>
