--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@
 		<a href="https://ieeexplore.ieee.org/document/9411868" target="_blank">Rotation-oriented Collaborative Self-supervised Learning for Retinal Disease Diagnosis</a><br>
 		Xiaomeng Li, Xiaowei Hu, Xiaojuan Qi, <b>Lequan Yu</b>, Wei Zhao, Pheng-Ann Heng, Lei Xing.<br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2021.</br>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/xmengli999/Rotation-oriented-self-supervised" target="_blank">code</a>]
+		</p>
 	</li>
 	<li>
 		<a href="https://aapm.onlinelibrary.wiley.com/doi/10.1002/mp.14901" target="_blank">MR to ultrasound image registration with segmentation-based learning for HDR prostate brachytherapy</a><br>
@@ -233,6 +236,9 @@
 		<a href="https://ieeexplore.ieee.org/document/9163289" target="_blank">DoFE: Domain-oriented Feature Embedding for Generalizable Fundus Image Segmentation on Unseen Datasets</a><br>
 		Shujun Wang, <b>Lequan Yu<sup>†</sup></b>, Kang Li, Xin Yang, Chi-Wing Fu, Pheng-Ann Heng. <br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2020.</br>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/emma-sjwang/Dofe" target="_blank">code</a>]
+		</p>
 	</li>
 		<li>
 		<a href="https://arxiv.org/abs/2006.03796" target="_blank">Deep Mining External Imperfect Data for Chest X-ray Diseases Screening</a><br>
