--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
 		<a href="" target="_blank">Selective Learning from External Data for CT Image Segmentation</a><br>
 		Youyi Song, <b>Lequan Yu</b>, Baiying Lei, Kup-Sze Choi, Jing Qin.<br>
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2021.</br>
+		<font color="red">Student Travel Award</font></br>
 	</li>
 	<li>
 		<a href="https://ieeexplore.ieee.org/document/9443209" target="_blank">Deep Neural Network with Consistency Regularization of Multi-Output Channels for Improved Tumor Detection and Delineation</a><br>
