--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
 <p style="color:red;">
-	I am looking for self-motivated Postdoc/PhD/RA/Interns, who are interested in artificial intelligence for healthcare. 
+	I am looking for self-motivated Postdoc/PhD/RA/Interns, who are interested in machine learning, computer vision, and artificial intelligence for healthcare. 
 	Welcome to drop me an email with your CV and transcripts. Remote collaboration is also welcome!
 </p>
 	
