--- a/index.html
+++ b/index.html
@@ -621,6 +621,8 @@
 <b>Journal Reviews:</b>
 	<br>
 	Nature Machine Intelligence <br>
+	IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)<br>
+	International Journal of Computer Vision (IJCV) <br>
 	Medical Image Analysis (MedIA)<br>
 	IEEE Transactions on Medical Imaging (TMI)<br>
 	IEEE Transactions on Image Processing (TIP)<br>
@@ -633,6 +635,7 @@
 	IEEE Journal of Biomedical and Health Informatics (JBHI)<br>
 	IEEE Robotics and Automation Letters (RA-L)<br>
 	ACM Transactions on Computing for Healthcare<br>
+	Pattern Recognition<br>
 	Medical Physics <br>
 	Neurocomputing <br>		
 	International Journal of Computer Assisted Radiology and Surgery (IJCARS)<br>
