--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[07/2021] We are organizing <a href="https://sites.google.com/view/CVAMD2021/">ICCV2021 workshop on Computer Vision for Automated Medical Diagnosis</a>.
+	</li>
+	<li>
 		[06/2021] Two papers were accepted by MICCAI 2021.
 	</li>
 	<li>
