--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 <h2>Biography</h2>
 <p>
-	I am currently an assistant professor at The University of Hong Kong. My research lies at the intersection of artificial intelligence and medical image analysis. 
+	I am an assistant professor at The University of Hong Kong. My research lies at the intersection of artificial intelligence and medical image analysis. 
 	I am dedicated to designing machine learning algorithms for biomedical data analysis, with a primary focus on medical images. 
 	Specifically, we focus on: 
 	1) developing multi-modal learning algorithms to intergrate different biomedical data; 
@@ -92,7 +92,7 @@
 
 
 <p style="color:red;">
-	I am looking for self-motivated Postdoc/PhD/RA/Interns, who are interested in artificial intelligence for healthcare, machine learning, computer vision, and natural language processing. 
+	I am looking for self-motivated Postdoc/PhD/RA/Interns, who are interested in artificial intelligence for healthcare, machine learning, computer vision, natural language processing, and bioinformatics. 
 	Welcome to drop me an email with your CV and transcripts. Remote collaboration is also welcome!
 </p>
 	
