--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[08/2021] One paper about metal artifact reduction was accepted by PMB.
+	</li>
+	<li>
 		[07/2021] We are organizing <a href="https://sites.google.com/view/CVAMD2021/">ICCV2021 workshop on Computer Vision for Automated Medical Diagnosis</a>.
 	</li>
 	<li>
@@ -174,6 +177,11 @@
 	</ul>
 	<p><font face="Arial" size="4"><b>2021</b></font></p>
 	<ul>
+	<li>
+		<a href="" target="_blank">Metal Artifact Reduction in 2D CT Images with Self-supervised Cross-domain Learning</a><br>
+		<b>Lequan Yu</b>, Zhicheng Zhang, Xiaomeng Li, Hongyi Ren, Wei Zhao, Lei Xing.<br>
+		<em>Physics in Medicine & Biology</em> (<i><b>PMB</b></i>), 2021.</br>
+	</li>
 	<li>
 		<a href="https://arxiv.org/abs/2103.00634" target="_blank">TransCT: Dual-path Transformer for Low Dose Computed Tomography</a><br>
 		Zhicheng Zhang, <b>Lequan Yu</b>, Xiaokun Liang, Wei Zhao, Lei Xing.<br>
