--- a/index.html
+++ b/index.html
@@ -615,10 +615,11 @@
 <li>	
 	<b>Conference Reviews:</b>
 	<br>
+	Senior PC of AAAI Conference on Artificial Intelligence (AAAI’22)<br>
 	Senior PC of International Joint Conference on Artificial Intelligence (IJCAI’21)<br>
+	IEEE Conference on Computer Vision and Pattern Recognition (CVPR’19-22)<br>
 	PC of AAAI Conference on Artificial Intelligence (AAAI’20-21)<br>
 	IEEE International Conference on Computer Vision (ICCV’21, ICCV'19)<br>
-	IEEE Conference on Computer Vision and Pattern Recognition (CVPR’19-21)<br>
 	Medical Image Computing and Computer Assisted Intervention (MICCAI’18-21)<br>
 	IEEE Winter Conference on Applications of Computer Vision (WACV’20-21)<br>
 	Medical Imaging with Deep Learning (MIDL’21)<br>
