--- a/index.html
+++ b/index.html
@@ -590,6 +590,7 @@
 <table style="border-spacing:2px">
 	
 		<tbody>
+		<tr><td>IEEE TMI Distinguished Reviewer Silver Level, 2021 </td></tr>
 		<tr><td> <a href="https://www.cse.cuhk.edu.hk/en/achievement/student/1317-dr-yu-lequan-received-cuhk-young-scholar-thesis-award-2019">CUHK Young Scholars Thesis Award 2019</a></td></tr>
 		<tr><td> Young Scientist Award Short-listed, Hong Kong Institution of Science, 2019 </td></tr>
 		<tr><td> Teaching Assistant of Merit, 2018</td></tr>
@@ -615,6 +616,7 @@
 <li>	
 	<b>Conference Reviews:</b>
 	<br>
+	Co-organizer of ICCV'21 workshop on Computer Vision for Automated Medical Diagnosis<br>
 	Senior PC of AAAI Conference on Artificial Intelligence (AAAI’22)<br>
 	Senior PC of International Joint Conference on Artificial Intelligence (IJCAI’21)<br>
 	IEEE Conference on Computer Vision and Pattern Recognition (CVPR’19-22)<br>
