--- a/index.html
+++ b/index.html
@@ -560,21 +560,39 @@
 
 <div id="students">
 <h2>Students</h2>
-	<b>Current Mentorship:</b>
+	<b>Postgraduate Students:</b>
 	<br>	
 	<table style="border-spacing:2px">
 	<tbody>
-	<tr><td> <a href="https://www.linkedin.com/in/lingting-zhu-0930861b6/?originalSubdomain=cn" target="_blank">Lingting Zhu</a> (incoming Ph.D.) (HKU-PS)</td></tr>
-	<tr><td> <a href="https://fuying-wang.github.io/" target="_blank">Fuying Wang</a> (incoming Ph.D.)</td></tr>
-	
+	<tr><td> <a href="https://www.linkedin.com/in/lingting-zhu-0930861b6/?originalSubdomain=cn" target="_blank">Lingting Zhu</a> (HKU-PS)</td></tr>
+	<tr><td> <a href="https://fuying-wang.github.io/" target="_blank">Fuying Wang</a></td></tr>
 	</tbody>
 	</table>
 	<br>
+	
+	<b>Research Assistants:</b>
+	<br>	
+	<table style="border-spacing:2px">
+	<tbody>
+	<tr><td> <a href="https://charlespikachu.github.io/" target="_blank">Zhenchao Jin</a></td></tr>
+	<tr><td> <a href="" target="_blank">Weiqin Zhao</a></td></tr>
+	</tbody>
+	</table>
+	<br>
+	
+	<b>Undergraduate & Master Students:</b>
+	<br>	
+	<table style="border-spacing:2px">
+	<tbody>
+	<tr><td> Zhuo Liang (BSc at HKU)</td></tr>	
+	</tbody>
+	</table>
+	<br>
+	
 	<b>Previous Mentorship:</b>
 	<br>
 	<table style="border-spacing:2px">
 	<tbody>
-	
 	<tr><td> Kang Li (Ph.D. at CUHK) </td></tr>
 	<tr><td> <a href="https://emmaw8.github.io/" target="_blank">Shujun Wang</a> (Ph.D. at CUHK) (incoming Postdoc at Stanford)</td></tr>
 	<tr><td> <a href="http://web.stanford.edu/~liyues/" target="_blank">Liyue Shen</a> (Ph.D. at Stanford)</td></tr>
