--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
 	<table style="border-spacing:2px">
 	<tbody>
 	<tr><td> <a href="https://charlespikachu.github.io/" target="_blank">Zhenchao Jin</a></td></tr>
-	<tr><td> <a href="" target="_blank">Weiqin Zhao</a></td></tr>
+	<tr><td> Weiqin Zhao</td></tr>
 	</tbody>
 	</table>
 	<br>
