--- a/index.html
+++ b/index.html
@@ -584,7 +584,12 @@
 	<br>	
 	<table style="border-spacing:2px">
 	<tbody>
-	<tr><td> Zhuo Liang (BSc at HKU)</td></tr>	
+		<tr><td> Zhuo Liang (BSc at HKU)</td></tr>
+		<tr><td> Ruichen Luo (BEng at ZJU)</td></tr>
+		<tr><td> Yiqing Shen (BSc at SJTU)</td></tr>
+		<tr><td> Zeqi Xiao (BEng at ZJU)</td></tr>
+		<tr><td> Miao Yan (Master at McGill)</td></tr>
+		<tr><td> Yijun Yang (BEng at SDU)</td></tr>
 	</tbody>
 	</table>
 	<br>
