--- a/index.html
+++ b/index.html
@@ -581,8 +581,8 @@
 	</table>
 	<br>
 	
-	<!--
-	<b>Undergraduate & Master Students:</b>
+	
+	<!-- <b>Undergraduate & Master Students:</b>
 	<br>	
 	<table style="border-spacing:2px">
 	<tbody>
@@ -594,8 +594,8 @@
 		<tr><td> Yijun Yang (BEng at SDU)</td></tr>
 	</tbody>
 	</table>
-	<br>
-	-->
+	<br> -->
+	
 	
 	<b>Previous Mentorship:</b>
 	<br>
