--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 	<p><font face="Arial" size="4"><b>2021</b></font></p>
 	<ul>
 	<li>
-		<a href="" target="_blank">Metal Artifact Reduction in 2D CT Images with Self-supervised Cross-domain Learning</a><br>
+		<a href="https://iopscience.iop.org/article/10.1088/1361-6560/ac195c" target="_blank">Metal Artifact Reduction in 2D CT Images with Self-supervised Cross-domain Learning</a><br>
 		<b>Lequan Yu</b>, Zhicheng Zhang, Xiaomeng Li, Hongyi Ren, Wei Zhao, Lei Xing.<br>
 		<em>Physics in Medicine & Biology</em> (<i><b>PMB</b></i>), 2021.</br>
 	</li>
@@ -188,10 +188,13 @@
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2021.</br>
 	</li>
 	<li>
-		<a href="" target="_blank">Selective Learning from External Data for CT Image Segmentation</a><br>
+		<a href="https://link.springer.com/chapter/10.1007/978-3-030-87193-2_40" target="_blank">Selective Learning from External Data for CT Image Segmentation</a><br>
 		Youyi Song, <b>Lequan Yu</b>, Baiying Lei, Kup-Sze Choi, Jing Qin.<br>
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2021.</br>
 		<font color="red">Student Travel Award</font></br>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/YouyiSong/Codes-for-Selective-Learning" target="_blank">code</a>]
+		</p>
 	</li>
 	<li>
 		<a href="https://ieeexplore.ieee.org/document/9443209" target="_blank">Deep Neural Network with Consistency Regularization of Multi-Output Channels for Improved Tumor Detection and Delineation</a><br>
