--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
 		<a href="https://arxiv.org/abs/2103.00634" target="_blank">TransCT: Dual-path Transformer for Low Dose Computed Tomography</a><br>
 		Zhicheng Zhang, <b>Lequan Yu</b>, Xiaokun Liang, Wei Zhao, Lei Xing.<br>
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2021.</br>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/zzc623/TransCT" target="_blank">code</a>]
+		</p>
 	</li>
 	<li>
 		<a href="https://link.springer.com/chapter/10.1007/978-3-030-87193-2_40" target="_blank">Selective Learning from External Data for CT Image Segmentation</a><br>
