--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[12/2021] One paper was accepted by AAAI 2022.
+	</li>
+	<li>
 		[08/2021] One paper about metal artifact reduction was accepted by PMB.
 	</li>
 	<li>
