--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
 <p style="color:red;">
-	I am looking for self-motivated Postdoc/PhD/RA/Interns, who are interested in artificial intelligence for healthcare, machine learning, computer vision, natural language processing, and bioinformatics. 
+	I am looking for self-motivated Postdoc/PhD/RA/Interns, who are interested in artificial intelligence for healthcare, machine learning, computer vision, EHR processing, and bioinformatics. 
 	Welcome to drop me an email with your CV and transcripts. Remote collaboration is also welcome!
 </p>
 	
@@ -105,6 +105,9 @@
 
 <div style="height: 240px; overflow: auto;">
 <ul>
+	<li>
+		[01/2022] One paper was accepted by TMI.
+	</li>
 	<li>
 		[12/2021] One paper was accepted by AAAI 2022.
 	</li>
@@ -573,9 +576,9 @@
 	<br>	
 	<table style="border-spacing:2px">
 	<tbody>
-		<tr><td> <a href="https://fuying-wang.github.io/" target="_blank">Fuying Wang</a></td></tr>
+		<tr><td> <a href="" target="_blank">Fuying Wang</a></td></tr>
 		<tr><td> Weiqin Zhao</td></tr>
-		<tr><td> <a href="https://www.linkedin.com/in/lingting-zhu-0930861b6/?originalSubdomain=cn" target="_blank">Lingting Zhu</a> (HKU-PS)</td></tr>
+		<tr><td> <a href="https://www.linkedin.com/in/lingting-zhu-0930861b6/" target="_blank">Lingting Zhu</a> (HKU-PS)</td></tr>
 	
 	</tbody>
 	</table>
@@ -611,9 +614,9 @@
 	<table style="border-spacing:2px">
 	<tbody>
 	<tr><td> Kang Li (Ph.D. at CUHK) </td></tr>
-	<tr><td> <a href="https://emmaw8.github.io/" target="_blank">Shujun Wang</a> (Ph.D. at CUHK) (incoming Postdoc at Stanford)</td></tr>
-	<tr><td> <a href="http://web.stanford.edu/~liyues/" target="_blank">Liyue Shen</a> (Ph.D. at Stanford)</td></tr>
-	<tr><td> <a href="https://nini-lxz.github.io/" target="_blank">Xianzhi Li</a> (Ph.D. at CUHK) (now, Postdoc at CUHK)</td></tr>
+	<tr><td> <a href="http://web.stanford.edu/~liyues/" target="_blank">Liyue Shen</a> (Ph.D. at Stanford)</td></tr>	
+	<tr><td> <a href="https://emmaw8.github.io/" target="_blank">Shujun Wang</a> (Ph.D. at CUHK) (now, Postdoc at CUHK)</td></tr>
+	<tr><td> <a href="https://nini-lxz.github.io/" target="_blank">Xianzhi Li</a> (Ph.D. at CUHK) (now, Assoc. Prof. at HUST)</td></tr>
 	</tbody>
 	</table>
 <!-- <a href="https://people.ucsc.edu/~jwang470/about/">Jialu Wang</a>, UCSC PhD student (co-advising with <a href="http://www.yliuu.com">Yang Liu</a>)<br>-->
