--- a/index.html
+++ b/index.html
@@ -181,6 +181,20 @@
 	<ul>
 		* indicates equal contribution; <sup>†</sup> indicates corresponding authorship.
 	</ul>
+	<p><font face="Arial" size="4"><b>2022</b></font></p>
+	<ul>
+	<li>
+		<a href="" target="_blank">H&sup2-MIL: Exploring Hierarchical Representation with Heterogeneous Multiple Instance Learning for Whole Slide Image Analysis</a><br>
+		Wentai Hou, <b>Lequan Yu</b>, Chengxuan Lin, Helong Huang, Rongshan Yu, Jing Qin, Liansheng Wang.<br>
+		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. </br>
+	</li>
+	<li>
+		<a href="https://ieeexplore.ieee.org/document/9667530" target="_blank">Robust Medical Image Classification from Noisy Labeled Data with Global and Local Representation Guided Co-training</a><br>
+		Cheng Xue, <b>Lequan Yu</b>, Pengfei Chen, Qi Dou, Pheng-Ann Heng.<br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2022.</br>
+	</li>	
+	</ul>
+	
 	<p><font face="Arial" size="4"><b>2021</b></font></p>
 	<ul>
 	<li>
