--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[01/2022] One paper was accepted by MedIA.
+	</li>
+	<li>
 		[01/2022] One paper was accepted by TMI.
 	</li>
 	<li>
@@ -183,6 +186,11 @@
 	</ul>
 	<p><font face="Arial" size="4"><b>2022</b></font></p>
 	<ul>
+	<li>
+		<a href="" target="_blank">Novel-view X-ray Projection Synthesis through Geometry-integrated Deep Learning</a><br>
+		Liyue Shen, <b>Lequan Yu</b>, Wei Zhao, John Pauly, Lei Xing. <br>
+		<em>Medical Image Analysis</em> (<i><b>MedIA</b></i>), 2022.</br>
+	</li>
 	<li>
 		<a href="" target="_blank">H&sup2-MIL: Exploring Hierarchical Representation with Heterogeneous Multiple Instance Learning for Whole Slide Image Analysis</a><br>
 		Wentai Hou, <b>Lequan Yu</b>, Chengxuan Lin, Helong Huang, Rongshan Yu, Jing Qin, Liansheng Wang.<br>
@@ -668,6 +676,7 @@
 <li>	
 	<b>Conference Reviews:</b>
 	<br>
+	Area Chair of Medical Image Computing and Computer Assisted Intervention (MICCAI’22)<br>
 	Co-organizer of ICCV'21 workshop on Computer Vision for Automated Medical Diagnosis<br>
 	Senior PC of AAAI Conference on Artificial Intelligence (AAAI’22)<br>
 	Senior PC of International Joint Conference on Artificial Intelligence (IJCAI’21)<br>
@@ -684,7 +693,7 @@
 </li>
 
 <li>
-<b>Journal Reviews:</b>
+	<b>Journal Reviews:</b>
 	<br>
 	Nature Machine Intelligence <br>
 	IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)<br>
