--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	I am an assistant professor at The University of Hong Kong. My research lies at the intersection of artificial intelligence and medical image analysis. 
 	I am dedicated to designing machine learning algorithms for biomedical data analysis, with a primary focus on medical images. 
 	Specifically, we focus on: 
-	1) developing multi-modal learning algorithms to intergrate different biomedical data; 
+	1) developing multi-modal learning algorithms to intergrate different biomedical data for disease prevention, diagnosis, and prognosis; 
 	2) building real-world learning systems to learn reliable, generalizable, and fair representations from imperfect medical data;
 	and 3) developing causality-based learning algorithms to improve its interpretability for healthcare problems.
 	<!--Recently, I am working on new learning algorithms while minimizing human supervision (self-supervised, semi-supervised and multi-modality learning) and medical image reconstruction.-->
@@ -728,22 +728,7 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> 2015-2016</td><td>Fall</td><td>CSCI1130 Introduction to Computing Using Java</td>
-		</tr>
-		<tr>
-			<td> 2015-2016</td><td>Spring</td><td>CSCI3180 Principles of Programming Languages</td>
-		</tr>
-		<tr>
-			<td> 2016-2017</td><td>Fall</td><td>ENGG5108 Big Data Analytics</td>
-		</tr>
-        	<tr>
-			<td> 2016-2017</td><td>Spring</td><td>CSCI3150 Introduction to Operating Systems</td>
-		</tr>
-		<tr>
-			<td> 2017-2018</td><td>Fall</td><td>CSCI3150 Introduction to Operating Systems</td>
-		</tr>
-		<tr>
-			<td> 2017-2018</td><td>Spring</td><td>CSCI3150 Introduction to Operating Systems</td>
+			<td> 2022Spring</td><td>APAI4011/STAT4011 Natural Language Processing</td>
 		</tr>
 	</tbody>
 </table>
